--- a/index.html
+++ b/index.html
@@ -23,6 +23,23 @@
 </head>
 
 <body>
+    <div id="auth-overlay" style="
+    position: fixed;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
+    background: rgba(0,0,0,0.85);
+    display: none;
+    justify-content: center;
+    align-items: center;
+    z-index: 2000;
+    transition: opacity 0.3s;">
+        <div style="background: #fff; padding: 30px; border-radius: 10px; width: 300px; text-align: center;">
+            <h4>Ingresar</h4>
+            <input id="input-pass" type="password" class="form-control mt-3" placeholder="Contraseña">
+            <button onclick="validarPassword()" class="btn btn-danger mt-3">Entrar</button>
+            <p id="auth-msg" style="display:none;color:red;margin-top:10px;"></p>
+        </div>
+    </div>
 
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg shadow-sm">
@@ -31,9 +48,8 @@
                 <img src="logo.png" alt="Deizer Distribuidora" width="40" height="40" class="me-2 rounded-circle">
                 Deizer <span style="color:#ff0000;">Distribuidora</span>
             </a>
-            <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-                aria-label="Toggle navigation">
+            <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
@@ -57,8 +73,10 @@
     <section class="container my-5 text-center">
         <h2 class="section-title mb-4">Sobre Nosotros</h2>
         <p>
-            En <strong>Deizer Distribuidora</strong> trabajamos con compromiso y seriedad, brindando productos de calidad para
-            empresas, talleres y hogares. Nuestra meta es ser tu proveedor de confianza, ofreciendo atención personalizada y soluciones rápidas.
+            En <strong>Deizer Distribuidora</strong> trabajamos con compromiso y seriedad, brindando productos de
+            calidad para
+            empresas, talleres y hogares. Nuestra meta es ser tu proveedor de confianza, ofreciendo atención
+            personalizada y soluciones rápidas.
         </p>
     </section>
 
@@ -144,7 +162,8 @@
                     <h6 class="fw-bold text-danger">Contacto</h6>
                     <ul class="list-unstyled small">
                         <li>📍 Lanús Oeste, Buenos Aires</li>
-                        <li>📞 <a href="tel:+541138438009">11 3843-8009</a> / <a href="tel:+541138450063">11 3845-0063</a></li>
+                        <li>📞 <a href="tel:+541138438009">11 3843-8009</a> / <a href="tel:+541138450063">11
+                                3845-0063</a></li>
                         <li>📧 <a href="mailto:distribuidoradeizer@gmail.com">distribuidoradeizer@gmail.com</a></li>
                     </ul>
                     <a href="https://wa.me/541138438009?text=Hola!%20Quisiera%20consultar%20por%20productos%20🔩"
@@ -159,7 +178,8 @@
                     <a href="https://www.instagram.com/distribuidora_deizer/" target="_blank" class="text-light me-3">
                         <i class="bi bi-instagram fs-4"></i>
                     </a>
-                    <a href="https://www.facebook.com/profile.php?id=100087113179513" target="_blank" class="text-light me-3">
+                    <a href="https://www.facebook.com/profile.php?id=100087113179513" target="_blank"
+                        class="text-light me-3">
                         <i class="bi bi-facebook fs-4"></i>
                     </a>
                 </div>
@@ -175,6 +195,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="productos.js"></script>
+    <script src="auth.js"></script>
 </body>
 
 </html>
