--- a/pages/productos.html
+++ b/pages/productos.html
@@ -72,20 +72,24 @@
 </head>
 
 <body>
-  <!-- Overlay oscuro 
-  <div id="auth-overlay"
-    class="position-fixed top-0 start-0 w-100 h-100 d-flex justify-content-center align-items-center bg-dark bg-opacity-75"
-    style="z-index:2000;">
-    <div class="card p-4 text-center" style="width: 320px;">
-      <h5 class="mb-3 fw-bold">Acceso restringido</h5>
-      <p class="text-muted small mb-3">Ingresá la contraseña para continuar</p>
-
-      <input type="password" id="input-pass" class="form-control mb-3 text-center" placeholder="Contraseña">
-      <button class="btn btn-danger w-100" onclick="validarPassword()">Ingresar</button>
-
-      <p id="auth-msg" class="text-danger small mt-2" style="display:none;">Contraseña incorrecta ❌</p>
+  <!-- AUTH OVERLAY -->
+  <div id="auth-overlay" style="
+    position: fixed;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
+    background: rgba(0,0,0,0.85);
+    display: none;
+    justify-content: center;
+    align-items: center;
+    z-index: 2000;
+    transition: opacity 0.3s;">
+    <div style="background: #fff; padding: 30px; border-radius: 10px; width: 300px; text-align: center;">
+      <h4>Ingresar</h4>
+      <input id="input-pass" type="password" class="form-control mt-3" placeholder="Contraseña">
+      <button onclick="validarPassword()" class="btn btn-danger mt-3">Entrar</button>
+      <p id="auth-msg" style="display:none;color:red;margin-top:10px;"></p>
     </div>
-  </div>-->
+  </div>
 
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg shadow-sm">
@@ -195,9 +199,8 @@
   </footer>
   <script src="../productos.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  
-  <script src="../auth.js"></script>
 
+  <script src="../auth.js"></script>
 </body>
 
 </html>
