--- a/pages/quienesSomos.html
+++ b/pages/quienesSomos.html
@@ -14,6 +14,24 @@
 </head>
 
 <body>
+    <!-- AUTH OVERLAY -->
+    <div id="auth-overlay" style="
+    position: fixed;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
+    background: rgba(0,0,0,0.85);
+    display: none;
+    justify-content: center;
+    align-items: center;
+    z-index: 2000;
+    transition: opacity 0.3s;">
+        <div style="background: #fff; padding: 30px; border-radius: 10px; width: 300px; text-align: center;">
+            <h4>Ingresar</h4>
+            <input id="input-pass" type="password" class="form-control mt-3" placeholder="Contraseña">
+            <button onclick="validarPassword()" class="btn btn-danger mt-3">Entrar</button>
+            <p id="auth-msg" style="display:none;color:red;margin-top:10px;"></p>
+        </div>
+    </div>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg shadow-sm">
         <div class="container">
@@ -123,7 +141,8 @@
                     <h6 class="fw-bold text-danger">Contacto</h6>
                     <ul class="list-unstyled small">
                         <li>📍 Lanús Oeste, Buenos Aires</li>
-                        <li>📞 <a href="tel:+541138438009">11 3843-8009</a> / <a href="tel:+541138450063">11 3845-0063</a></li>
+                        <li>📞 <a href="tel:+541138438009">11 3843-8009</a> / <a href="tel:+541138450063">11
+                                3845-0063</a></li>
                         <li>📧 <a href="mailto:distribuidoradeizer@gmail.com">distribuidoradeizer@gmail.com</a></li>
                     </ul>
                     <a href="https://wa.me/541138438009?text=Hola!%20Quisiera%20consultar%20por%20productos%20🔩"
@@ -151,8 +170,8 @@
             </div>
         </div>
     </footer>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../auth.js"></script>
 </body>
 
 </html>
