--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
     <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/footer.css">
 
+    <meta property="og:title" content="Inicio - Distribuidora Deizer">
+    <meta property="og:description" content="Confianza compartida, resultados reales.">
+    <meta property="og:image" content="https://distribuidora-deizer.github.io/distribuidoraDeizer/logo.png">
+    <meta property="og:url" content="https://distribuidora-deizer.github.io/distribuidoraDeizer/index.html">
+    <meta property="og:type" content="website">
 </head>
 
 <body>
