--- a/pages/productos.html
+++ b/pages/productos.html
@@ -10,6 +10,12 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
 
+  <meta property="og:title" content="Catálogo de Productos - Distribuidora Deizer">
+  <meta property="og:description" content="Mirá todos los productos disponibles con fotos y precios actualizados.">
+  <meta property="og:image" content="https://distribuidora-deizer.github.io/distribuidoraDeizer/logo.png">
+  <meta property="og:url" content="https://distribuidora-deizer.github.io/distribuidoraDeizer/pages/productos.html">
+  <meta property="og:type" content="website">
+
   <style>
     .navbar {
       background-color: #000;
