--- a/pages/quienesSomos.html
+++ b/pages/quienesSomos.html
@@ -11,6 +11,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/home2.css">
     <link rel="stylesheet" href="../css/footer.css">
+
+    <meta property="og:title" content="Qiénes somos - Distribuidora Deizer">
+    <meta property="og:description" content="Conocé la historia, misión y visión de Deizer Distribuidora en Lanús Oeste.">
+    <meta property="og:image" content="https://distribuidora-deizer.github.io/distribuidoraDeizer/logo.png">
+    <meta property="og:url" content="https://distribuidora-deizer.github.io/distribuidoraDeizer/pages/quienesSomos.html">
+    <meta property="og:type" content="website">
 </head>
 
 <body>
